Fixed broken layout when there is no OPF data for yesterday.

--- a/css/ui.css
+++ b/css/ui.css
@@ -260,6 +260,7 @@ strong { font-weight: 700; }
 .graphday,
 .today {
   display: inline-block;
+  vertical-align: top;
   width: 64px;
   height: 142px;
   text-align: center;
